@@ -7,6 +7,7 @@ import errno
 import signal
 import pwd
 import gobject
+import util
 
 XNEST_ARGV = [ "/usr/X11R6/bin/Xnest", "-audit", "0", "-name", "Xnest", "-nolisten", "tcp" ]
 #SESSION_ARGV = [ "/etc/X11/xdm/Xsession", "gnome" ]
@@ -17,6 +18,9 @@ class ProtoSessionError (Exception):
     pass
 
 class SessionStartError (ProtoSessionError):
+    pass
+
+class XauthParseError (ProtoSessionError):
     pass
 
 def __safe_kill (pid, sig):
@@ -43,6 +47,9 @@ class ProtoSession (gobject.GObject):
         self.session_child_watch = 0
 
     def __del__ (self):
+        # FIXME: delete xauth files
+        # self.session_xauth_file
+        # self.xnest_xauth_file
         if self.usr1_pipe_r:
             close (self.usr1_pipe_r)
         if self.usr1_pipe_w:
@@ -125,7 +132,81 @@ class ProtoSession (gobject.GObject):
     def __usr1_timeout_handler (self):
         self.main_loop.quit ()
         return True
-    
+
+    def __get_xauth_record (self):
+        (status, output) = commands.getstatusoutput ("xauth -in list $DISPLAY")
+        if status != 0:
+            raise XauthParseError, "'xauth list' returned error"
+
+        for line in output.split ("\n"):
+            fields = line.split ("  ")
+            if len (fields) == 3 and len (fields[2]) % 2 == 0:
+                return (fields[1], binascii.unhexlify (fields[2]))
+        
+        raise XauthParseError, "'xauth list' returned no records or records in unknown format"
+
+    # Write out a temporary Xauthority file which contains the same magic
+    # cookie as the parent display so that we can pass that using -auth
+    # to Xnest.
+    #
+    # Xauthority is a binary file format:
+    #
+    #       2 bytes         Family value (second byte is as in protocol HOST)
+    #       2 bytes         address length (always MSB first)
+    #       A bytes         host address (as in protocol HOST)
+    #       2 bytes         display "number" length (always MSB first)
+    #       S bytes         display "number" string
+    #       2 bytes         name length (always MSB first)
+    #       N bytes         authorization name string
+    #       2 bytes         data length (always MSB first)
+    #       D bytes         authorization data string
+    #
+    def __write_temp_xauth_file (self):
+        (xauth_name, xauth_data) = self.__get_xauth_record ()
+        
+        display_num_str = str (self.display_number)
+        display_num_len = len (display_num_str)
+
+        xauth_name_len = len (xauth_name)
+        xauth_data_len = len (xauth_data)
+
+        pack_format = ">hh0sh%dsh%dsh%d" % (display_num_len, xauth_name_len, xauth_data_len)
+
+        blob = struct.pack (pack_format,
+                            0xffff, # FamilyWild
+                            0, "",  # address
+                            display_num_len, display_num_str,
+                            xauth_name_len, xauth_name,
+                            xauth_data_len) + xauth_data
+
+        (fd, temp_xauth_file) = tempfile.mkstemp (prefix = ".xauth-")
+        os.write (fd, blob)
+        os.close (fd)
+
+        return temp_xauth_file
+
+    def __copy_xauth_file (self, uid, gid):
+        if os.environ.has_key ("XAUTHORITY"):
+            xauth_file = os.environ["XAUTHORITY"]
+        else:
+            xauth_file = util.get_home_dir () + "/.Xauthority"
+
+        try:
+            handle = file (xauth_file, "r")
+        except IOError, (err, str):
+            raise SessionStartError, "Unable to locate Xauthority file '%s': %s" % (xauth_file, str)
+        
+        (fd, xauth_copy) = tempfile.mkstemp (prefix = ".Xauthority")
+
+        for line in file:
+            os.write (fd, line)
+        os.close (fd)
+        file.close ()
+
+        os.chown (xauth_copy, uid, gid)
+
+        return xauth_copy
+        
     #
     # FIXME: we have a re-entrancy issue here - if while we're
     # runing the mainloop we re-enter, then we'll install another
@@ -138,6 +219,8 @@ class ProtoSession (gobject.GObject):
 
         self.display_name = ":%d" % self.display_number
 
+        self.xnest_xauth_file = self.__write_temp_xauth_file ()
+
         (self.usr1_pipe_r, self.usr1_pipe_w) = os.pipe ()
         self.got_usr1_signal = False
         signal.signal (signal.SIGUSR1, self.__sigusr1_handler)
@@ -145,8 +228,9 @@ class ProtoSession (gobject.GObject):
         self.xnest_pid = os.fork ()
         if self.xnest_pid == 0: # Child process
             signal.signal (signal.SIGUSR1, signal.SIG_IGN)
-            
-            argv = XNEST_ARGV + [ self.display_name ]
+
+            argv = XNEST_ARGV + [ "-auth", self.xnest_xauth_file ]
+            argv += [ self.display_name ]
 
             os.execv (argv[0], argv)
 
@@ -214,6 +298,8 @@ class ProtoSession (gobject.GObject):
         if pw.pw_dir == "" or not os.path.isdir (pw.pw_dir):
             raise SessionStartError, "Home directory for user '%s' does not exist" % self.username
 
+        self.session_xauth_file = self.__copy_xauth_file (pw.pw_uid, pw.pw_gid)
+        
         self.session_pid = os.fork ()
         if self.session_pid == 0: # Child process
             os.setgid (pw.pw_gid)
@@ -221,7 +307,6 @@ class ProtoSession (gobject.GObject):
 
             os.chdir (pw.pw_dir)
 
-            # FIXME: need to setup X cookie
             # FIXME: setting the selinux context?
 
             new_environ = {}
@@ -231,14 +316,11 @@ class ProtoSession (gobject.GObject):
                    key == "LINGUAS":
                     new_environ[key] = os.environ[key]
 
-                if key == "XAUTHORITY": # FIXME: remove
-                    new_environ[key] = os.environ[key]
-
             os.environ = new_environ
     
             os.environ["PATH"]       = DEFAULT_PATH 
-            # os.environ["XAUTHORITY"] = "" # FIXME
             os.environ["DISPLAY"]    = self.display_name
+            os.environ["XAUTHORITY"] = self.session_xauth_file
             os.environ["LOGNAME"]    = pw.pw_name
             os.environ["USER"]       = pw.pw_name
             os.environ["USERNAME"]   = pw.pw_name
@@ -259,9 +341,13 @@ class ProtoSession (gobject.GObject):
 
     def start (self):
         self.__start_xnest ()
+
+        # FIXME: need to apply profile before starting session
         
         # At this point, we should be able to connect to Xnest
         self.__start_session ()
+
+        # FIXME: need to run the change viewer tool
 
     def force_quit (self):
         if self.xnest_child_watch:
