@@ -1,5 +1,10 @@
 2005-01-28  Mark McLoughlin  <mark@skynet.ie>
 
+	* lib/protosession.py: copy the xauth file for the user
+	before starting the session.
+
+2005-01-28  Mark McLoughlin  <mark@skynet.ie>
+
 	* lib/protosession.py: add code to write out an xauth
 	file for Xnest.
 
